# minesleeper

./: CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: IMG.c.210E15D2C34388DE.idx  IMG_WIC.c.A6338E40A90443ED.idx  IMG_ani.c.3A8F3E5EAC7DF080.idx  IMG_ani.h.DC7FBE5A6DCCC135.idx  IMG_anim_decoder.c.A10DF90283378264.idx  IMG_anim_decoder.h.7C2AAEE928355D02.idx  IMG_anim_encoder.c.41BEF1E58DFACCF1.idx  IMG_anim_encoder.h.3CE6A97C3ABA8CB8.idx  IMG_avif.c.8AB82BFAB954EACC.idx  IMG_avif.h.ADD3F104AE51523B.idx  IMG_bmp.c.01363A7476CDB5E5.idx  IMG_gif.c.EFE77EE68FA5A213.idx  IMG_gif.h.96CEDDDE8889DE96.idx  IMG_jpg.c.F8F5EBE01FFA77DC.idx  IMG_jxl.c.22358416136CC852.idx  IMG_lbm.c.BD374EB3C6738696.idx  IMG_libpng.c.66DEBF07D4EF12A6.idx  IMG_libpng.h.E713F58CBE886A88.idx  IMG_pcx.c.A1E1D2404B9A1663.idx  IMG_png.c.034D30B5467175CF.idx  IMG_pnm.c.BBB986E8F47E4698.idx  IMG_qoi.c.DD2981565722F5DC.idx  IMG_stb.c.F2EF4AC2C3337BC1.idx  IMG_svg.c.1FB2D429CDEF397F.idx  IMG_tga.c.A419FAAF012620E2.idx  IMG_tif.c.FDF6C481F9561068.idx  IMG_webp.c.9EDB48FB10468C31.idx  IMG_webp.h.A00639D2E2A7AC02.idx  IMG_xcf.c.A32B4CBDF0CA04F3.idx  IMG_xpm.c.85400D0C1BA23D75.idx  IMG_xv.c.AF35826C9D32F0AA.idx  SDL.c.C05848819504BAB8.idx  SDL.h.0500C860804FB930.idx  SDL_RLEaccel.c.90A4834872CC44D0.idx  SDL_RLEaccel_c.h.D7ECA618A556C9DA.idx  SDL_alsa_audio.c.841E6390BE6E618D.idx  SDL_alsa_audio.h.44EE44F6202E9504.idx  SDL_appid.c.A2433EDADC01C4B9.idx  (+666 more)
src/: globals.h  main.cc
src/engine/: button.h  image.h  random.h  rectangle.h  text.h  window.h
src/minesleeper/: cell.cc  cell.h  grid.h  ui.h
